Add documentation link.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Damien Radtke <dradtke@channeliq.com>"]
 
 description = "TCP server implementation suitable for chat rooms and games."
 repository = "https://github.com/dradtke/lobby"
+documentation = "http://www.rustdox.com/dradtke/lobby/lobby/"
 license = "MIT"
 
 keywords = ["tcp", "server", "lobby", "game", "networking"]
