Fixes compiler errors from language changes in the main library
Fixes #1. The example has not yet been ported.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ documentation = "http://www.rustdox.com/dradtke/lobby/lobby/"
 license = "MIT"
 
 keywords = ["tcp", "server", "lobby", "game", "networking"]
+
+[dependencies]
+vec_map = "0.6.0"
